force-app/main/default/objects/PPSTN_Onboarding_Event__e/PPSTN_Onboarding_Event__e.object-meta.xml
<CustomObject>
    <label>PPSTN_Onboarding_Event</label>
    <pluralLabel>PPSTN_Onboarding_Event</pluralLabel>
</CustomObject>