force-app/main/default/objects/PPSTN_Onboarding_Event__e/fields/PPSTN_Client_SFID__c.field-meta.xml
<CustomField>
    <fullName>PPSTN_Client_SFID__c</fullName>
    <label>PPSTN_Client_SFID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>