force-app/main/default/objects/PPSTN_Onboarding_Event__e/fields/PPSTN_ClientID__c.field-meta.xml
<CustomField>
    <fullName>PPSTN_ClientID__c</fullName>
    <label>PPSTN_ClientID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>