force-app/main/default/objects/PPSTN_Onboarding_Event__e/fields/PPSTN_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>PPSTN_Onboarding_Status__c</fullName>
    <label>PPSTN_Onboarding_Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>